# DriveSync

./: 99-ydlidar-x2.rules  README.md
V2V-main/: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  PUBLISH_TO_GITHUB.md  README.md  motor_test.py  simple_teleop.py
V2V-main/differential_drive_robot/: CMakeLists.txt  README.md  package.xml
V2V-main/differential_drive_robot/launch/: pi_robot_nodes.launch.py
V2V-main/differential_drive_robot/scripts/: setup_distributed.md  setup_pc.sh  setup_pi.sh
V2V-main/differential_drive_robot/src/: odometry_node.py  teleop_keyboard.py  test_system.py
V2V-main/ros_arduino_bridge/: WIRING_GUIDE.md  YOUR_WIRING_GUIDE.md  test_arduino.py
install/: local_setup.sh  setup.sh
log/: latest_build  latest_version-check
robot_control/: AUTO_PORT_DETECTION_UPDATE.md  HARDWARE_DIAGNOSIS.md  INSTALLATION_GUIDE.md  LIDAR_INTEGRATION_SUMMARY.md  README.md  WIRING_DIAGRAM.md  YOLO_DETECTION_GUIDE.md  collision_avoidance_system.py  install_python_dependencies.py  install_ydlidar_sdk.sh  pathfinding_robot_controller.py  requirements.txt  robot_controller.py  run_pathfinding_robot.sh  run_robot_controller.py  smooth_robot_controller.py  test_collision_debug.py  test_manual_control.py  yolo_headless_detection.py  yolo_realtime_detection.py
robot_control/debug_scripts/: check_current_firmware.py  check_firmware.py  debug_encoder_movement.py  debug_odometry.py  debug_robot_controller_encoders.py  find_arduino_baudrate.py  fix_motor_runaway.py  fix_odometry_mapping.py  motor_configuration_fix.py  motor_direction_test.py  motor_encoder_test.py  (+12 more)
(+66 files in other folders)
